[package]
name = "pipeviewer"
version = "1.0.0"
edition = "2021"
authors = ["startdusk <522383345@qq.com>"]
description = "A tool to show the progress of a program"
homepage = "https://github.com/startdusk/pipeviewer"
repository = "https://github.com/startdusk/pipeviewer"
readme = "README.md"
keywords = ["pipe", "viewer", "cli", "progres"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
crossbeam = "0.8.1"
crossterm = "0.23.0"